; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_adhoc.c_adhoc_getpath.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_adhoc.c_adhoc_getpath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [8 x i8] c"unknown\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"anon_inode:[%s]\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"%s:[%lu]\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fd*, i8*)* @adhoc_getpath to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adhoc_getpath(%struct.fd* %0, i8* %1) #0 {
  %3 = alloca %struct.fd*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store %struct.fd* %0, %struct.fd** %3, align 8
  store i8* %1, i8** %4, align 8
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  %6 = load %struct.fd*, %struct.fd** %3, align 8
  %7 = getelementptr inbounds %struct.fd, %struct.fd* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i8*, i8** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 (i8*, i8*, i8*, ...) @sprintf(i8* %12, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8* %13)
  br label %23

15:                                               ; preds = %2
  %16 = load i8*, i8** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = load %struct.fd*, %struct.fd** %3, align 8
  %19 = getelementptr inbounds %struct.fd, %struct.fd* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = call i32 (i8*, i8*, i8*, ...) @sprintf(i8* %16, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* %17, i64 %21)
  br label %23

23:                                               ; preds = %15, %11
  ret i32 0
}

declare dso_local i32 @sprintf(i8*, i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
